tests/neg-macros/i17545d/Test_2.scala
def testB =
  case object WhateverB
  val whateverB: WhateverB.type = InvokeConstructor[WhateverB.type] // error
